fixing right-aligned selects

--- a/src/main/webapp/css/tdar-bootstrap.css
+++ b/src/main/webapp/css/tdar-bootstrap.css
@@ -1099,3 +1099,8 @@ h3.collection-mid-red::before {
     visibility:hidden;
     display:none;
 }
+
+/* counter-acting ff's rendering of right-aligned elements in labels */
+select.searchType {
+	text-align: left !important;
+}
